syntax = "proto3";

package authv1;

option go_package = "github.com/vine-io/services/proto/service/auth/v1;authv1";

// +gen:openapi
service AuthService {
	// +gen:post=/auth/v1/auth/Call
	rpc Call(Request) returns (Response) {}
	rpc Stream(StreamingRequest) returns (stream StreamingResponse) {}
	rpc PingPong(stream Ping) returns (stream Pong) {}
}

message Request {
    // +gen:required
	string name = 1;
}

message Response {
	string msg = 1;
}

message StreamingRequest {
	int64 count = 1;
}

message StreamingResponse {
	int64 count = 1;
}

message Ping {
	int64 stroke = 1;
}

message Pong {
	int64 stroke = 1;
}
